[project]
name = "comfyui-bmad-dirtyundoredo"
description = "ComfyUI extension that adds undo (and redo) functionality."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/bmad4ever/ComfyUI-Bmad-DirtyUndoRedo"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Bmad-DirtyUndoRedo"
Icon = ""
